# uvg266

./: .clang-format  .gitignore  .gitlab-ci.yml  .travis-install.bash  .travis.yml  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  configure.ac  docs.doxy
.github/workflows/: kvazaar.yml  pull_request.yml  uvg266.yml
doc/: kvazaar.1  uvg266.1
src/: Makefile.am  alf.c  alf.h  bitstream.c  bitstream.h  cabac.c  cabac.h  cfg.c  cfg.h  checkpoint.c  checkpoint.h  cli.c  cli.h  constraint.c  constraint.h  context.c  context.h  cu.c  cu.h  debug.c  debug.h  dep_quant.c  dep_quant.h  encmain.c  encode_coding_tree.c  encode_coding_tree.h  encoder.c  encoder.h  encoder_state-bitstream.c  encoder_state-bitstream.h  encoder_state-ctors_dtors.c  encoder_state-ctors_dtors.h  encoder_state-geometry.c  encoder_state-geometry.h  encoderstate.c  encoderstate.h  encoding_resume.c  encoding_resume.h  fast_coeff_cost.c  fast_coeff_cost.h  (+65 more)
src/extras/: libmd5.c  libmd5.h
src/strategies/: missing-intel-intrinsics.h  optimized_sad_func_ptr_t.h  strategies-alf.c  strategies-alf.h  strategies-dct.c  strategies-dct.h  strategies-depquant.c  strategies-depquant.h  strategies-encode.c  strategies-encode.h  strategies-intra.c  strategies-intra.h  strategies-ipol.c  strategies-ipol.h  strategies-nal.c  strategies-nal.h  strategies-picture.c  strategies-picture.h  strategies-quant.c  strategies-quant.h  strategies-sao.c  strategies-sao.h
src/strategies/altivec/: picture-altivec.c  picture-altivec.h
src/strategies/avx2/: alf-avx2.c  alf-avx2.h  avx2_common_functions.h  dct-avx2.c  dct-avx2.h  dct_avx2_tables.h  depquant-avx2.c  depquant-avx2.h  encode_coding_tree-avx2.c  encode_coding_tree-avx2.h  intra-avx2.c  intra-avx2.h  intra_avx2_tables.h  ipol-avx2.c  ipol-avx2.h  mip_data_avx2.h  picture-avx2.c  picture-avx2.h  quant-avx2.c  quant-avx2.h  reg_sad_pow2_widths-avx2.h  sao-avx2.c  sao-avx2.h
src/strategies/generic/: alf-generic.c  alf-generic.h  dct-generic.c  dct-generic.h  depquant-generic.c  depquant-generic.h  encode_coding_tree-generic.c  encode_coding_tree-generic.h  intra-generic.c  intra-generic.h  ipol-generic.c  ipol-generic.h  mip_data_generic.h  nal-generic.c  nal-generic.h  picture-generic.c  picture-generic.h  quant-generic.c  quant-generic.h  sao-generic.c  sao-generic.h  sao_shared_generics.h
src/strategies/sse2/: picture-sse2.c  picture-sse2.h
src/strategies/sse41/: alf-sse41.c  alf-sse41.h  picture-sse41.c  picture-sse41.h  reg_sad_pow2_widths-sse41.h
src/strategies/sse42/: picture-sse42.c  picture-sse42.h
src/strategies/x86_asm/: picture-x86-asm-sad.h  picture-x86-asm-satd.h  picture-x86-asm.c  picture-x86-asm.h
src/threadwrapper/include/: semaphore.h
src/threadwrapper/src/: semaphore.cpp
tests/: CMakeLists.txt  Makefile.am  check_cabac_state_consistency.py  coeff_sum_tests.c  dct_tests.c  inter_recon_bipred_tests.c  intra_sad_tests.c  mts_tests.c  mv_cand_tests.c  sad_tests.c  sad_tests.h  satd_tests.c  satd_tests.h  speed_tests.c  test_cabac_state.sh  test_external_symbols.sh  test_intra.sh  test_invalid_input.sh  test_lmcs.sh  test_monochrome.sh  test_mtt.sh  test_mtt_both.sh  test_mtt_inter.sh  test_mtt_intra.sh  test_slices.sh  test_strategies.c  test_strategies.h  test_tools.sh  test_weird_shapes.sh  tests_main.c  util.sh
tools/: cabac_match.py  generate_ref_pixel_tables.py  generate_tables.c  genmanpage.sh  plot-threadqueue-log.py  update_readme.sh
